--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ spacy
 PyPDF2
 sentence-transformers
 pandas
+torch
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
