--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ pandas
 PyPDF2
 sentence-transformers
 spacy==3.7.2
+numpy==1.24.3
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
